--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-hook-form": "^7.54.0",
     "react-native": "0.76.3",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "^4.13.1",
     "react-native-vector-icons": "^10.2.0",
     "resend": "^4.0.1"
   },
